--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="third-row">
                 <div class="image-about">
-                    <img src="Headshot.jpg" alt="Headshot Image" width="640" height="556">
+                    <img src="./Users/acroy12/Desktop/Bootcamp Code/UX_UI_HW_17/images/Headshot.jpg" alt="Headshot Image" width="640" height="556">
                 </div>
                 <div class="title-paragraph">
                     <div class="title-about">About</div>
