--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./Users/acroy12/Desktop/Bootcamp Code/UI_UX_HW_18/css/style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <meta name="author" content="Austin Croyle"> 
     </head>
 
@@ -23,7 +23,7 @@
             </div>
             <div class="third-row">
                 <div class="image-about">
-                    <img src="./Users/acroy12/Desktop/Bootcamp Code/UI_UX_HW_18/images/Headshot.jpg" alt="Headshot Image" width="640" height="556">
+                    <img src="images/Headshot.jpg" alt="Headshot Image" width="640" height="556">
                 </div>
                 <div class="title-paragraph">
                     <div class="title-about">About</div>
@@ -55,19 +55,19 @@
                 </div>
             </div>
             <div class="image-skills">
-                <img src="Apps.jpg" alt="Software Images" width="866" height="388">
+                <img src="images/Apps.jpg" alt="Software Images" width="866" height="388">
             </div>
             <div class="case-studies">
                 <div class="title-case-studies">Case Studies</div>
                     <div class="first-case-study">
                         <div class="section-title-one">Art Hive Local<br class="responsive-break-two"> IOS App Concept</div>
-                        <img src="art hive HERO.jpg" alt="Art Hive Hero Case Study" width="1320" height="654">
+                        <img src="images/art hive HERO.jpg" alt="Art Hive Hero Case Study" width="1320" height="654">
                     </div>
                     <div class="second-case-study">
                         <div class="section-title-two">Wyoming Fish & Game<br class="responsive-break-three"> Website Redesign</div>
                         <picture>
                             <source media="(max-width:738px)" srcset="WF&G_SMALL.jpg" width="390" height="774">
-                            <img src="WF&G.jpg" alt="WF&G Case Study" width="1320" height="932">
+                            <img src="images/WF&G.jpg" alt="WF&G Case Study" width="1320" height="932">
                         </picture>
                     </div>
             </div>
